HIL/src/objects/Group_Member__c.object
<CustomObject>
    <description>Custom object that acts as a junction between a Client &amp; Prospect record and a Relationship Group record.</description>
    <fields>
        <fullName>Client_Prospect__c</fullName>
        <label>Client/Prospect</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Group_Members</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Date__c</fullName>
        <label>Last Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Meeting_Date__c</fullName>
        <label>Last Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Relationship_Group__c</fullName>
        <label>Relationship Group</label>
        <referenceTo>Relationship_Group__c</referenceTo>
        <relationshipLabel>Group Members</relationshipLabel>
        <relationshipName>Group_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Primary_Asset_RU__c</fullName>
        <description>Field needed for Rollup</description>
        <label>Total Primary Asset RU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Primary_Asset__c</fullName>
        <formula>Client_Prospect__r.Total_Primary_Asset_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Primary Asset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Primary_Cash_Available_RU__c</fullName>
        <description>Field needed for Rollup</description>
        <label>Total Primary Cash Available RU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Primary_Cash_Available__c</fullName>
        <formula>Client_Prospect__r.Total_Primary_Cash_Available__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Primary Cash Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Primary_Money_Market_RU__c</fullName>
        <description>Field needed for Rollup</description>
        <label>Total Primary Money Market RU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Primary_Money_Market__c</fullName>
        <formula>Client_Prospect__r.Total_Primary_Money_Market__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Primary Money Market</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Primary_Revenue_RU__c</fullName>
        <description>Field needed for Rollup</description>
        <label>Total Primary Revenue RU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Primary_Revenue__c</fullName>
        <description>Field needed for Rollup</description>
        <formula>Client_Prospect__r.Total_Primary_Revenue_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Primary Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandchild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandparent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Husband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wife</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id , &quot;View&quot;, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wallet_Share__c</fullName>
        <formula>Client_Prospect__r.Wallet_Share__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wallet Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Group Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Relationship_Group__c</columns>
        <columns>Client_Prospect__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GM-{00000}</displayFormat>
        <label>Group Member #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>